# narcotycs

./: .gitignore  CHANGELOG.md  narcotycs.cabal
.github/workflows/: run-tests.yml
app/: Main.hs
examples/: example.naive
lib/Naive/: Checker.hs  Constraints.hs  Interface.hs  Parser.hs
test/: Checker.hs  Main.hs  Parser.hs
